--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon index"
   },
   "dependencies": {
+    "backend": "file:",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
