--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.9",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "frontend": "file:",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "mdb-react-ui-kit": "^6.1.0",
